I made a minor edit for the purpose of demonstration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     
-	<title>Let's Learn Git, GitHub and the Command Line merge</title>
+	<title>Let's Learn Git, GitHub and the Command Line</title>
     
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
@@ -11,7 +11,7 @@
 <body>
 	<section>
 		<h1>Git, GitHub &amp; the Command Line...!</h1>
-		<p>Gotta love becoming a collaborative coder and learning about version control!</p>
+		<p>Gotta love becoming a collaborative coder and learning about version control wit Github!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
